--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.5",
+    "axios": "^1.3.0",
     "cheerio": "^1.0.0-rc.12",
     "classnames": "^2.3.2",
     "eslint": "8.32.0",
